--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,13 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="msg">消息</string>
-    <string name="rdermanagement">订单管理</string>
+    <string name="ordermanagement">订单管理</string>
     <string name="my">我的</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="zhaogongren">找工人</string>
+    <string name="zhaogongzuo">找工作</string>
+    <string name="jiancaidaojia">建材到家</string>
+    <string name="gongsi">公司</string>
 </resources>
